--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,7 @@ name: microSWIFTtelemetry
 channels:
   - defaults
 dependencies:
-  - matplotlib==3.6.2
-  - numpy==1.23.4
+  - numpy
   - pandas==1.5.1
   - xarray==2022.11.0
   - pip:
