generalize environment.yaml

--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,7 @@ channels:
   - defaults
 dependencies:
   - numpy
-  - pandas==1.5.1
-  - xarray==2022.11.0
+  - pandas
+  - xarray
   - pip:
     - microswifttelemetry
-
-prefix: /opt/homebrew/Caskroom/miniconda/base/envs/microSWIFTtelemetry_python3-9
